.provarCaches/00D5f000005vwGkEAI/objects/rstkf__paysessdate__c.object
<CustomObject>
    <description>paysessdate__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__paysessdate_paysession__r.rstkf__externalid__c + TEXT(rstkf__paysessdate_paydate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__paysessdate_paysession__r.Name + &apos;-&apos; +  TEXT(rstkf__paysessdate_paydate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessdate_paydate__c</fullName>
        <description>Payment Date</description>
        <inlineHelpText>This field holds the unique payment date used from some (or all) of the payment transactions in this session.</inlineHelpText>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessdate_paysession__c</fullName>
        <description>Payment Session</description>
        <inlineHelpText>Payment Session to which the Date Detail belongs.</inlineHelpText>
        <label>Payment Session</label>
        <referenceTo>rstkf__paysession__c</referenceTo>
        <relationshipName>paysessdates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessdate_pmtinfid__c</fullName>
        <description>Payment Information ID</description>
        <formula>VALUE(rstkf__paysessdate_paysession__r.rstkf__paysession_sessionid__c)  + VALUE(rstkf__paysessdate_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is the unique Payment Information ID for this Session and Date</inlineHelpText>
        <label>Payment Information ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessdate_seq__c</fullName>
        <description>Payment Date Sequence</description>
        <inlineHelpText>This field is a system assigned sequence number, unique with the payment session.</inlineHelpText>
        <label>Payment Date Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Selection Session Pay Dates</label>
    <nameField>
        <label>paysessdate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Selection Session Pay Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>